--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
 
     <div class='container'>
-        <div class='header'>
+      <div class='header'>
+        <!-- <div class='header'> -->
           <div class='topbanner'>
               <img src= "./resources/images/logo-white.png"/>
               <span>Tortoiseshell Optics</span>
@@ -25,7 +26,7 @@
           <h2>DON'T JUST LOOK, SEE&#46</h2>
         </div>
       </div>
-
+    
 
     <!-- Midsection Navigation -->
     <div class='midsectionnav'>
