--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <link href= "resources/styles/style.css" type='text/css' rel='stylesheet'>
     <title>Tortoiseshell Optics</title>
   </head>
@@ -26,7 +28,7 @@
           <h2>DON'T JUST LOOK, SEE&#46</h2>
         </div>
       </div>
-    
+
 
     <!-- Midsection Navigation -->
     <div class='midsectionnav'>
