--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
               <img src= "./resources/images/logo-white.png"/>
               <span>Tortoiseshell Optics</span>
           <!--Nav Menu-->
-          <div class='navmenu'>
-            <ul>
-              <li>Services</li>
-              <li>Products</li>
-              <li>Contact</li>
-            </ul>
-          </div>
+              <div class='navmenu'>
+                <ul>
+                  <li>Services</li>
+                  <li>Products</li>
+                  <li>Contact</li>
+                </ul>
+              </div>
         </div>
         <div class='jumbotron'>
           <h2>DON'T JUST LOOK, SEE&#46</h2>
@@ -33,7 +33,7 @@
     <!-- Midsection Navigation -->
     <div class='midsectionnav'>
       <div class='feature'>
-      <img src="./resources/images/paper-icon.png"/>
+      <img id='paper' src="./resources/images/paper-icon.png"/>
       <h3>Comprehensive Exams</h3></div>
       <div class='feature'>
       <img src="./resources/images/ruler-icon.png"/>
